--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ scipy
 numpy
 matplotlib
 cloudpickle
-gym==0.20.0; sys_platform != 'darwin' or platform_machine != 'arm64'
-gym; sys_platform == 'darwin' and platform_machine == 'arm64'
+gym
 pybullet
 torch
 bottleneck
