Fix extra-index-url format

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ matplotlib
 cloudpickle
 gym
 pybullet
-torch --extra-index-url https://download.pytorch.org/whl/cu118
 bottleneck
+--extra-index-url https://download.pytorch.org/whl/cu118
+torch
