--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ scipy
 numpy
 matplotlib
 cloudpickle
-gym
+gym==0.19.0  # if getting errs, downgrade setuptools: pip install setuptools==65.5.0
 pybullet
 bottleneck
 --extra-index-url https://download.pytorch.org/whl/cu118
